[tool.poetry]
name = "thinghoo-adminlte2"
version = "0.1.1"
description = "A adminlte2 template with thinghoo plugin"
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.11"

[tool.poetry.dev-dependencies]
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "thinghoo"
url = "https://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"

